tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__CoinsCoinsCoins-AAAAAAAAAAAAAAAAAAAAEA==__TinOreexchange-AAAAAAAAAAAAAAAAAAAJgg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2434,
  "prerequisites": [
    31
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You can exchange your stack of GT Tin Ore for IC2 Tin Ore.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Tin Ore Exchange",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": 24000,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    31
  ],
  "rewards": [],
  "tasks": []
}
